[gd_scene load_steps=4 format=3 uid="uid://db7jmgybhiy4g"]

[ext_resource type="Script" uid="uid://c7gw1db1smxge" path="res://ui/dialogue/dialogue_ui.gd" id="1_4cdch"]
[ext_resource type="Texture2D" uid="uid://y612kc6ardbg" path="res://assets/images/9-patch-gold.png" id="1_2081n"]
[ext_resource type="Theme" uid="uid://bnrly8ofgjk1a" path="res://assets/themes/game_theme.tres" id="2_vl8is"]

[node name="DialogueUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4cdch")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 13

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.105
offset_bottom = -0.105011
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_2081n")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="DialogueBox" type="VBoxContainer" parent="CanvasLayer/NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.5
offset_top = 2.5
offset_right = -2.5
offset_bottom = -2.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_vl8is")

[node name="DialogueText" type="Label" parent="CanvasLayer/NinePatchRect/DialogueBox"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_vl8is")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DialogueOptions" type="HBoxContainer" parent="CanvasLayer/NinePatchRect/DialogueBox"]
layout_mode = 2
theme = ExtResource("2_vl8is")
alignment = 1
